--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
 <nav>
   <a routerLink="/form1" routerLinkActive="active">Form Async Validator</a>
   <a routerLink="/async-template" routerLinkActive="active">Async Template Changes</a>
+  <a routerLink="/triple-async" routerLinkActive="active">Triple async</a>
   <a routerLink="/" routerLinkActive="active">Home</a>
 </nav>
 
