--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   <a routerLink="/form1" routerLinkActive="active">Form Async Validator</a>
   <a routerLink="/async-template" routerLinkActive="active">Async Template Changes</a>
   <a routerLink="/triple-async" routerLinkActive="active">Triple async</a>
+  <a routerLink="/css-enc" routerLinkActive="active">Css enc</a>
   <a routerLink="/" routerLinkActive="active">Home</a>
 </nav>
 
