--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   <a routerLink="/async-template" routerLinkActive="active">Async Template Changes</a>
   <a routerLink="/triple-async" routerLinkActive="active">Triple async</a>
   <a routerLink="/css-enc" routerLinkActive="active">Css enc</a>
+  <a routerLink="/infinite-scroll" routerLinkActive="active">Infinite scroll</a>
   <a routerLink="/" routerLinkActive="active">Home</a>
 </nav>
 
