--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
   <a routerLink="/triple-async" routerLinkActive="active">Triple async</a>
   <a routerLink="/css-enc" routerLinkActive="active">Css enc</a>
   <a routerLink="/infinite-scroll" routerLinkActive="active">Infinite scroll</a>
+  <a routerLink="/detect-full-render" routerLinkActive="active">Detect full render</a>
   <a routerLink="/" routerLinkActive="active">Home</a>
 </nav>
 
