--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
   <a routerLink="/css-enc" routerLinkActive="active">Css enc</a>
   <a routerLink="/infinite-scroll" routerLinkActive="active">Infinite scroll</a>
   <a routerLink="/detect-full-render" routerLinkActive="active">Detect full render</a>
+  <a routerLink="/star-grid" routerLinkActive="active">Star grid</a>
   <a routerLink="/" routerLinkActive="active">Home</a>
 </nav>
 
